<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CompartilheSeuJogo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="gamertag">Gamertag</string>
    <string name="email">E-Mail</string>
    <string name="entrar">Entrar</string>
    <string name="title_activity_amigos">Amigos</string>
    <string name="tab_frinds">Amigos</string>
    <string name="tab_games">Jogos</string>
    <string name="tab_acct">Conta</string>
    <string name="yourLoans">Seus emprestimos</string>
    <string name="borrow">Pedir emprestado</string>
    <string name="disponivel">Disponível</string>
    <string name="logout">Desconectar</string>
    <string name="perfil">Perfil</string>
    <string name="emprestar">Emprestar</string>
    <string name="title_activity_start">StartActivity</string>

</resources>
